Sun Aug 11 03:26:07 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bitsize): Fix a conditional expression.

Sun Aug 11 02:44:03 2013  Zachary Scott  <e@zzak.io>

	* lib/time.rb: [DOC] Document constants by @markijbema [Fixes GH-377]
	  https://github.com/ruby/ruby/pull/377

Sun Aug 11 01:28:52 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Revert r42458.
	  It removes the HAVE_CLOCK_GETTIME from config.h.
	  http://www.rubyist.net/~akr/chkbuild/debian/ruby-trunk/log/20130809T044800Z.diff.html.gz

Sat Aug 10 13:53:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_id_attrset): allow other than ID_ATTRSET.

	* parse.y (intern_str): ditto.  try stem ID for ID_INSTANCE,
	  ID_GLOBAL, ID_CLASS, ID_JUNK too.  [Bug #8756]

Sat Aug 10 12:49:50 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb
	  (REXML::Parsers::BaseParser::CDATA_END): Use "\A" instead of "^".
	  It is not an used constant but I fix it. (Or shuold I remove it?)

Sat Aug 10 12:47:19 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser):
	  Fix wrong constant name. "]>" pattern match is the same but
	  it is used for "<!DOCTYPE" end mark not "<![CDATA[" end mark.

Sat Aug 10 12:43:15 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser):
	  Use "\A" instead of "^" in document type declaration patterns
	  because they are used as the head match in content not the head
	  match in line. They don't cause any problems in the current code
	  but it should be fixed.

Sat Aug 10 12:39:00 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parse/test_document_type_declaration.rb: Add tests for
	  parsing document type declaration.

Sat Aug 10 12:00:45 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser::SYSTEM):
	  Fix loose "head" match regular expression. It doesn't cause any